# zatca-saath

./: .dockerignore  .env.example  .gitignore  ARABIC_MANDATORY_IMPLEMENTATION.md  BACKEND_UPGRADE.md  BACKEND_UPGRADE_SUMMARY.md  Dockerfile  Makefile  QUICK_START.md  README.md  ZATCA_COMPLIANCE.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/instructions/: updated.instructions.md  zatka.instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 26d2b12e89ca_add_draft_table_and_invoice_enhancements.py  30a433690956_migrate_customer_fields_to_arabic_.py
app/: __init__.py  config.py  database.py  main.py
app/api/: auth.py  company.py  draft.py  invoice.py  preview.py
app/models/: company.py  draft.py  invoice.py  user.py
app/schemas/: company.py  draft.py  invoice.py  invoice_history.py  preview.py  user.py
app/services/: invoice_service.py  pdf_generator.py  qr_generator.py  zatca_validator.py
app/utils/: arabic.py  security.py
static/fonts/: README.md
tests/: test_auth.py  test_invoice_generation.py  test_qr_code.py
